--- a/exam-online-api/ruoyi-admin/src/main/resources/application.yml
+++ b/exam-online-api/ruoyi-admin/src/main/resources/application.yml
@@ -55,9 +55,9 @@ spring:
   redis:
      database: 0 # Redis数据库索引（默认为0）
      # host: localhost # Redis服务器地址
-     host: 10.200.121.66
+     host: 127.0.0.1
      port: 6379 # Redis服务器连接端口
-     password: Neusoft_Js123 # Redis服务器连接密码（默认为空）
+     password: root # Redis服务器连接密码（默认为空）
      timeout: 20000 # 连接超时时间（毫秒）
      jedis:
         pool:
